Blink Animation: Extend Animation's GC lifetime if it has a finish promise.

BUG=617539

Review-Url: https://codereview.chromium.org/2536523002
Cr-Commit-Position: refs/heads/master@{#434612}

Former-commit-id: bfbc065caf6187d00c0e549f07ad264bb1614873